--- a/FEB/2.23-2.29.md
+++ b/FEB/2.23-2.29.md
@@ -2,7 +2,13 @@
 
 **2020.2.23**
 
-英语单词P1|c++语言学习|计算机网络教材|操作系统教材|英语单词P2|md语言学习|英语单词P1、2复习
-:---------------|:---------------|:---------------|:---------------|:---------------|:---------------|:---------------
-17:00-17:10|16:10-17:00|||23:30-23:40||
-not good|21:35-23:20|||||
+Time|Program|Sign
+:---------------|:---------------|:---------------
+16:10-17:00|c++语言学习|done
+17:00-17:10|英语单词P1|Done
+21:35-23:20|c++语言学习|done
+23:30-23:40|英语单词P2|done
+
+**2020.2.24**
+Time|Program|Sign
+:---------------|:---------------|:---------------
