--- a/FEB/2.23-2.29.md
+++ b/FEB/2.23-2.29.md
@@ -3,7 +3,7 @@
 **2020.2.23**
 
 Time|Program|Sign
-:---------------|:---------------|:---------------
+:---------------:|:---------------:|:---------------:
 16:10-17:00|c++语言学习|done
 17:00-17:10|英语单词P1|Done
 21:35-23:20|c++语言学习|done
@@ -11,4 +11,7 @@ Time|Program|Sign
 
 **2020.2.24**
 Time|Program|Sign
-:---------------|:---------------|:---------------
+:---------------:|:---------------:|:---------------:
+3:00-3:10|英语单词P1、P2复习|done
+16:10-19:10|c++语言学习|done
+19:10-19:30|md格式学习|done
