--- a/FEB/2.23-2.29.md
+++ b/FEB/2.23-2.29.md
@@ -5,11 +5,12 @@
 Time|Program|Sign
 :---------------:|:---------------:|:---------------:
 16:10-17:00|c++语言学习|done
-17:00-17:10|英语单词P1|Done
+17:00-17:10|英语单词P1|done
 21:35-23:20|c++语言学习|done
 23:30-23:40|英语单词P2|done
 
 **2020.2.24**
+
 Time|Program|Sign
 :---------------:|:---------------:|:---------------:
 3:00-3:10|英语单词P1、P2复习|done
