--- a/FEB/2.23-2.29.md
+++ b/FEB/2.23-2.29.md
@@ -16,3 +16,11 @@ Time|Program|Sign
 3:00-3:10|英语单词P1、P2复习|done
 16:10-19:10|c++语言学习|done
 19:10-19:30|md格式学习|done
+21:00-22:00|c++语言学习|done
+22:20-0:20|c++语言学习|done
+
+**2020.2.25**
+
+Time|Program|Sign
+:---------------:|:---------------:|:---------------:
+0:20-0:35|英语单词P1、P2听写|done
