--- a/FEB/2.23-2.29.md
+++ b/FEB/2.23-2.29.md
@@ -24,3 +24,9 @@ Time|Program|Sign
 Time|Program|Sign
 :---------------:|:---------------:|:---------------:
 0:20-0:35|英语单词P1、P2听写|done
+11:10-11:30|英语单词P3|done
+11:30-12:00|c++语言学习|done
+15:30-17:40|c++语言学习|done
+17:40-17:50|英语单词P4|done
+22:20-00:20|c++语言学习|done
+2:00-2:20|英语单词P3、P4听写|done
