--- a/FEB/2.23-2.29.md
+++ b/FEB/2.23-2.29.md
@@ -30,3 +30,10 @@ Time|Program|Sign
 17:40-17:50|英语单词P4|done
 22:20-00:20|c++语言学习|done
 2:00-2:20|英语单词P3、P4听写|done
+
+**2020.2.26**
+
+Time|Program|Sign
+:---------------:|:---------------:|:---------------:
+17:50-18:00|英语单词P5+听写|done
+18:10-19:10|c++语言学习|done
