--- a/FEB/2.23-2.29.md
+++ b/FEB/2.23-2.29.md
@@ -37,3 +37,10 @@ Time|Program|Sign
 :---------------:|:---------------:|:---------------:
 17:50-18:00|英语单词P5+听写|done
 18:10-19:10|c++语言学习|done
+
+**2020.2.27**
+
+Time|Program|Sign
+:---------------:|:---------------:|:---------------:
+16:30-17:00|英语单词P6+听写|done
+17:00-18:30|c++语言学习|done
