--- a/FEB/2.23-2.29.md
+++ b/FEB/2.23-2.29.md
@@ -44,3 +44,6 @@ Time|Program|Sign
 :---------------:|:---------------:|:---------------:
 16:30-17:00|英语单词P6+听写|done
 17:00-18:30|c++语言学习|done
+
+**2020.2.28**
+DO NOTHING
