--- a/FEB/2.23-2.29.md
+++ b/FEB/2.23-2.29.md
@@ -46,10 +46,12 @@ Time|Program|Sign
 17:00-18:30|c++语言学习|done
 
 **2020.2.28**
+
 DO NOTHING
 
 **2020.2.29**
+
 Time|Program|Sign
 :---------------:|:---------------:|:---------------:
 16:50-17:40|c++语言学习|done
-21:00-23:00|c+语言学习|end21:40
+21:00-23:00|c+语言学习|end at 21:40
