--- a/MAR/3.1-3.7.md
+++ b/MAR/3.1-3.7.md
@@ -4,4 +4,10 @@
 
 Time|Progame|Sign
 :----------:|:----------|:----------:|
-16:50-17:30|c++语言学习|
+16:50-17:20|c++语言学习|done
+23:10-0:40|c++语言学习|done
+
+**2020.3.2**
+
+Time|Progame|Sign
+:----------:|:----------|:----------:|
