--- a/MAR/3.1-3.7.md
+++ b/MAR/3.1-3.7.md
@@ -11,3 +11,8 @@ Time|Progame|Sign
 
 Time|Progame|Sign
 :----------:|:----------|:----------:|
+14:20-16:20|计算机网络第一章教材|done
+17:00-18:20|计算机网络第一章教材|done
+18:20-18:50|c++语言学习|done
+19:50-20:30|c++语言学习|done
+22:00-22:40|c++语言学习|done
