--- a/MAR/3.1-3.7.md
+++ b/MAR/3.1-3.7.md
@@ -16,3 +16,17 @@ Time|Progame|Sign
 18:20-18:50|c++语言学习|done
 19:50-20:30|c++语言学习|done
 22:00-22:40|c++语言学习|done
+
+**2020.3.3**
+
+Time|Progame|Sign
+:----------:|:----------|:----------:|
+12:15-12:45|c++语言学习|done
+15:00-17:00|计算机网络第一章教材|done
+17:00-17:30|英语单词复习P1-6|done
+17:30-17:40|英语单词P7+听写|done
+17:40-19:10|计算机网络第一章王道书|done
+20:45-21:05|英语单词P8+听写|done
+21:05-22:15|计算机网络第一章王道书|done
+23:45-00:05|英语单词P9+听写|done
+00:40-1:20|英语单词P10+听写|done
