--- a/MAR/3.1-3.7.md
+++ b/MAR/3.1-3.7.md
@@ -30,3 +30,15 @@ Time|Progame|Sign
 21:05-22:15|计算机网络第一章王道书|done
 23:45-00:05|英语单词P9+听写|done
 00:40-1:20|英语单词P10+听写|done
+
+**2020.3.4**
+
+Time|Progame|Sign
+:----------:|:----------|:----------:|
+10:20-10:55|英语单词P11+听写|done
+10:55-12:20|计算机网路第一章王道书|done
+14:30-19:00|计算机网络2.1教材+王道书|done
+20:30-21:30|计算机网络2.1教材+王道书|done
+21:30-21:55|英语单词P12+听写|done
+21:55-22:30|c++语言学习|done
+23:25-23:55|英语单词复习P7-P12|done
