--- a/MAR/3.1-3.7.md
+++ b/MAR/3.1-3.7.md
@@ -42,3 +42,14 @@ Time|Progame|Sign
 21:30-21:55|英语单词P12+听写|done
 21:55-22:30|c++语言学习|done
 23:25-23:55|英语单词复习P7-P12|done
+
+**2020.3.5**
+
+Time|Progame|Sign
+:----------:|:----------|:----------:|
+8:45-9:15|英语单词P13+听写|done
+9:15-10:45|计算机网络2.2+2.3+2.4教材+王道书|done
+11:15-11:40|计算机网络第二章笔记|done
+11:40-12:35|c++语言学习|done
+14:10-14:45|英语单词P14+听写|done
+14:45-18:10|计算机网络3.1+3.2+3.3教材+王道书|done
