--- a/MAR/3.1-3.7.md
+++ b/MAR/3.1-3.7.md
@@ -53,3 +53,15 @@ Time|Progame|Sign
 11:40-12:35|c++语言学习|done
 14:10-14:45|英语单词P14+听写|done
 14:45-18:10|计算机网络3.1+3.2+3.3教材+王道书|done
+
+**2020.3.6**
+
+Time|Progame|Sign
+:----------:|:----------|:----------:|
+10:00-10:15|英语单词P15+听写|done
+10:15-12:00|计算机网络3.4教材+王道书|
+14:35-16:15|计算机网络3.4王道书|done
+17:15-18:10|计算机网络3.4王道书|done
+18:10-18:40|c++语言学习|done
+22:10-23:40|c++语言学习|done
+0:00-0:25|英语单词P16+听写|done
