--- a/MAR/3.1-3.7.md
+++ b/MAR/3.1-3.7.md
@@ -65,3 +65,12 @@ Time|Progame|Sign
 18:10-18:40|c++语言学习|done
 22:10-23:40|c++语言学习|done
 0:00-0:25|英语单词P16+听写|done
+
+**2020.3.7**
+
+Time|Progame|Sign
+:----------:|:----------|:----------:|
+13:10-13:45|英语p17+听写|done
+13:55-14:00|计算机网络3.5王道书|done
+14:50-16:00|计算机网络3.5王道书|done
+19:30-20:30|计算机网络3.5王道书|done
