--- a/MAR/3.15-3.21.md
+++ b/MAR/3.15-3.21.md
@@ -4,4 +4,6 @@
 
 Time|Program|Sign
 :-----:|:-----:|:-----:|
-9:50-|英语单词P18+听写|
+9:50-10:20|英语单词P18+听写|done
+10:20-11:15|计算机网络王道书3.5|done
+14:10-15:40|计算机网络王道书3.5、3.6|done
