--- a/MAR/3.15-3.21.md
+++ b/MAR/3.15-3.21.md
@@ -8,3 +8,9 @@ Time|Program|Sign
 10:20-11:15|计算机网络王道书3.5|done
 14:10-15:40|计算机网络王道书3.5、3.6|done
 19:40-20:40|计算机网络王道书3.6、3.7、3.8、3.9|done
+
+**2020.3.16**
+
+Time|Program|Sign
+:-----:|:-----:|:-----:|
+22:10-22:40|c++语言学习|
