--- a/MAR/3.15-3.21.md
+++ b/MAR/3.15-3.21.md
@@ -20,3 +20,19 @@ nothing||
 Time|Program|Sign
 :-----:|:-----:|:-----:|
 12:00-12:30|英语单词P13-P18复习|done
+
+**2020.3.18**
+
+Time|Program|Sign
+:-----:|:-----:|:-----:|
+17:20-17:30|英语单词P19+听写|done
+
+**2020.3.19**
+
+Time|Program|Sign
+:-----:|:-----:|:-----:|
+9:00-9:20|英语单词P20+听写|done
+9:20-11:30|计算机网络王道书3.7、3.8、3.9|done
+16:00-16:20|英语单词P21+听写|done
+16:20-17:10|计算机网络王道书3.8、3.9|done
+23:25-23:45|计算机网络王道书4.1|done
