--- a/MAR/3.22-3.28.md
+++ b/MAR/3.22-3.28.md
@@ -27,3 +27,11 @@ Time|Progame|Sign
 
 Time|Progame|Sign
 :-----:|:-----:|:-----:
+18:05-19:05|3B1B 2题|done
+
+
+**2020.3.27**
+
+Time|Progame|Sign
+:-----:|:-----:|:-----:
+18:50-|c++语言学习|
