--- a/Apr/3.29-4.4.md
+++ b/Apr/3.29-4.4.md
@@ -5,3 +5,18 @@
 Time|Programe|Sign
 |:-----:|:-----:|:-----:|
 16:10-16:50|c++语言学习|done
+
+**2020.3.31**
+
+Time|Programe|Sign
+|:-----:|:-----:|:-----:|
+10:30-10:45|英语单词P26+听写|done
+10:45-12:30|计算机网络王道书4.3|done
+
+**2020.4.1**
+
+Time|Programe|Sign
+|:-----:|:-----:|:-----:|
+15:45-15:55|英语单词P27+听写|done
+15:55-17:45|计算机网络王道书4.3|done
+18:20-19:05|计算机网络王道书4.3、4.4|done
