--- a/Apr/3.29-4.4.md
+++ b/Apr/3.29-4.4.md
@@ -20,3 +20,10 @@ Time|Programe|Sign
 15:45-15:55|英语单词P27+听写|done
 15:55-17:45|计算机网络王道书4.3|done
 18:20-19:05|计算机网络王道书4.3、4.4|done
+
+**2020.4.2**
+
+Time|Programe|Sign
+|:-----:|:-----:|:-----:|
+18:00-18:15|英语单词P28+听写|done
+18:15-19:10|计算机网络王道书4.4、4.5|done
