--- a/Apr/3.29-4.4.md
+++ b/Apr/3.29-4.4.md
@@ -27,3 +27,9 @@ Time|Programe|Sign
 |:-----:|:-----:|:-----:|
 18:00-18:15|英语单词P28+听写|done
 18:15-19:10|计算机网络王道书4.4、4.5|done
+
+**2020.4.4**
+
+Time|Programe|Sign
+|:-----:|:-----:|:-----:|
+15:40-17:00|计算机网络王道书4.5-4.9|
