--- a/Apr/4.5-4.11.md
+++ b/Apr/4.5-4.11.md
@@ -11,3 +11,10 @@ Time|Program|Sign
 20:30-21:00|计算机网络5.2|done
 21:05-21:45|c++语言学习|done
 22:50-23:10|c++语言学习|done
+
+**2020.4.7**
+
+Time|Program|Sign
+|:-----:|:-----:|:-----:|
+9:20-9:40|英语单词P30+听写|done
+9:40-10:10|计算机网络5.3|done
