--- a/Apr/4.5-4.11.md
+++ b/Apr/4.5-4.11.md
@@ -18,3 +18,10 @@ Time|Program|Sign
 |:-----:|:-----:|:-----:|
 9:20-9:40|英语单词P30+听写|done
 9:40-10:10|计算机网络5.3|done
+
+**2020.4.8**
+
+Time|Program|Sign
+|:-----:|:-----:|:-----:|
+
+15:30-15:40|英语单词P24-P30复习|done
