--- a/Apr/4.12-4.18.md
+++ b/Apr/4.12-4.18.md
@@ -4,4 +4,7 @@
 
 Time|Progame|Sign
 |:-----:|:-----:|:-----:|
-9:50-11:30|计算机网络5.3|
+9:30-9:45|英语单词P31+听写|done
+9:50-11:20|计算机网络5.3|done
+15:30-16:00|英语单词P32+听写|done
+21:40-23:00|计算机网络5.3|done
