--- a/Apr/4.12-4.18.md
+++ b/Apr/4.12-4.18.md
@@ -8,3 +8,14 @@ Time|Progame|Sign
 9:50-11:20|计算机网络5.3|done
 15:30-16:00|英语单词P32+听写|done
 21:40-23:00|计算机网络5.3|done
+
+**2020.4.14**
+
+Time|Progame|Sign
+|:-----:|:-----:|:-----:|
+7:45-8:00|英语单词P33+听写|done
+9:00-10:05|计算机网络5.3、5.4|done
+10:05-11:10|计算机网络第6章|done
+14:45-15:00|英语单词P34+听写|done
+15:10-16:35|线性代数同济第一章|done
+16:55-19:20|线性代数同济第一章|done
