--- a/Apr/4.12-4.18.md
+++ b/Apr/4.12-4.18.md
@@ -25,3 +25,13 @@ Time|Progame|Sign
 Time|Progame|Sign
 |:-----:|:-----:|:-----:|
 9:15-9:40|英语单词P35+听写|done
+
+**2020.4.17**
+
+Time|Progame|Sign
+|:-----:|:-----:|:-----:|
+10:15-10:50|英语单词P36+听写|done
+10:50-11:50|c++语言学习|done
+15:25-15:30|英语单词P31-P36|done
+15:30-17:00|操作系统1.1|done
+21:20-22:55|操作系统1.1、1.2|done
