--- a/Apr/4.12-4.18.md
+++ b/Apr/4.12-4.18.md
@@ -35,3 +35,11 @@ Time|Progame|Sign
 15:25-15:30|英语单词P31-P36|done
 15:30-17:00|操作系统1.1|done
 21:20-22:55|操作系统1.1、1.2|done
+
+**2020.4.18**
+
+Time|Progame|Sign
+|:-----:|:-----:|:-----:|
+15:30-15:55|英语单词P37|done
+16:15-17:45|操作系统第一章|done
+18:25-19:00|操作系统第一章|done
