--- a/Apr/4.19-4.25.md
+++ b/Apr/4.19-4.25.md
@@ -4,4 +4,7 @@
 
 Time|Progame|Sign
 |:-----:|:-----:|:-----:|
-8.15-8.45|英语单词P38+听写|done
+8:15-8:45|英语单词P38+听写|done
+8:50-9:50|操作系统第一章|done
+16:00-17:00|操作系统2.1|done
+20:45-21:50|操作系统2.1|done
