--- a/Apr/4.19-4.25.md
+++ b/Apr/4.19-4.25.md
@@ -8,3 +8,11 @@ Time|Progame|Sign
 8:50-9:50|操作系统第一章|done
 16:00-17:00|操作系统2.1|done
 20:45-21:50|操作系统2.1|done
+
+**2020.4.20**
+
+Time|Progame|Sign
+|:-----:|:-----:|:-----:|
+7:20-7:40|英语单词P39+听写|done
+8:40-9:30|操作系统2.1|done
+11:05-12:15|操作系统2.1|done
