--- a/Apr/4.19-4.25.md
+++ b/Apr/4.19-4.25.md
@@ -16,3 +16,12 @@ Time|Progame|Sign
 7:20-7:40|英语单词P39+听写|done
 8:40-9:30|操作系统2.1|done
 11:05-12:15|操作系统2.1|done
+
+**2020.4.22**
+
+Time|Progame|Sign
+|:-----:|:-----:|:-----:|
+10:35-10:55|英语单词P40+听写|done
+10:55-11:55|操作系统2.1|done
+17:40-18:15|操作系统2.1|done
+18:15-19:20|线性代数行列式|done
