--- a/Apr/4.19-4.25.md
+++ b/Apr/4.19-4.25.md
@@ -25,3 +25,11 @@ Time|Progame|Sign
 10:55-11:55|操作系统2.1|done
 17:40-18:15|操作系统2.1|done
 18:15-19:20|线性代数行列式|done
+
+**2020.4.23**
+
+Time|Progame|Sign
+|:-----:|:-----:|:-----:|
+8:30-8:50|英语单词P41+听写|done
+9:30-10:30|操作系统2.2|done
+15:00-16:00|操作系统2.2|done
