--- a/Apr/4.19-4.25.md
+++ b/Apr/4.19-4.25.md
@@ -33,3 +33,13 @@ Time|Progame|Sign
 8:30-8:50|英语单词P41+听写|done
 9:30-10:30|操作系统2.2|done
 15:00-16:00|操作系统2.2|done
+
+**2020.4.24**
+
+Time|Progame|Sign
+|:-----:|:-----:|:-----:|
+7:50-8:05|英语单词P42+听写|done
+15:25-15:30|英语单词P37-42复习|done
+15:30-17:35|操作系统2.2|done
+18:10-18:55|操作系统2.2|done
+19:00-19:20|线性代数行列式|done
