--- a/Apr/4.19-4.25.md
+++ b/Apr/4.19-4.25.md
@@ -43,3 +43,9 @@ Time|Progame|Sign
 15:30-17:35|操作系统2.2|done
 18:10-18:55|操作系统2.2|done
 19:00-19:20|线性代数行列式|done
+
+**2020.4.25**
+
+Time|Progame|Sign
+|:-----:|:-----:|:-----:|
+10:55-|线性代数行列式|
