--- a/Apr/4.19-4.25.md
+++ b/Apr/4.19-4.25.md
@@ -48,4 +48,5 @@ Time|Progame|Sign
 
 Time|Progame|Sign
 |:-----:|:-----:|:-----:|
-10:55-|线性代数行列式|
+10:55-11:20|线性代数行列式|done
+16:00-18:15|线性代数行列式|done
