--- a/Apr/4.26-5.2.md
+++ b/Apr/4.26-5.2.md
@@ -4,4 +4,8 @@
 
 Time|Progame|Sign
 :-----:|:-----:|:-----:|
-9:10-|线性代数行列式|
+8:20-8:40|英语单词P43+听写|done
+9:10-12:10|线性代数行列式|done
+14:15-15:55|线性代数行列式|done
+15:55-17:15|操作系统2.3|done
+22:30-23:40|操作系统2.3|done
