--- a/Apr/4.26-5.2.md
+++ b/Apr/4.26-5.2.md
@@ -9,3 +9,17 @@ Time|Progame|Sign
 14:15-15:55|线性代数行列式|done
 15:55-17:15|操作系统2.3|done
 22:30-23:40|操作系统2.3|done
+
+**2020.4.27**
+
+Time|Progame|Sign
+:-----:|:-----:|:-----:|
+7:35-8:00|英语单词P44+听写|done
+9:10-12:10|操作系统2.3|done
+15:20-18:20|线性代数行列式|done
+18:30-19:20|线性代数行列式|done
+
+**2020.4.28**
+
+Time|Progame|Sign
+:-----:|:-----:|:-----:|
