--- a/Apr/4.26-5.2.md
+++ b/Apr/4.26-5.2.md
@@ -23,3 +23,6 @@ Time|Progame|Sign
 
 Time|Progame|Sign
 :-----:|:-----:|:-----:|
+7:40-8:05|英语单词P45+听写|done
+14:15-15:15|线性代数行列式|done
+15:15-19:30|线性代数矩阵|done
