--- a/Apr/4.26-5.2.md
+++ b/Apr/4.26-5.2.md
@@ -26,3 +26,9 @@ Time|Progame|Sign
 7:40-8:05|英语单词P45+听写|done
 14:15-15:15|线性代数行列式|done
 15:15-19:30|线性代数矩阵|done
+
+**2020.4.28**
+
+Time|Progame|Sign
+:-----:|:-----:|:-----:|
+8:35-8:55|英语单词P46+听写|done
