--- a/Apr/4.26-5.2.md
+++ b/Apr/4.26-5.2.md
@@ -32,3 +32,14 @@ Time|Progame|Sign
 Time|Progame|Sign
 :-----:|:-----:|:-----:|
 8:35-8:55|英语单词P46+听写|done
+
+**2020.4.28**
+
+Time|Progame|Sign
+:-----:|:-----:|:-----:|
+8:50-9:05|英语单词P47+听写|done
+9:05-11:40|操作系统2.3|done
+14:55-16:45|操作系统2.3|done
+16:45-17:10|线性代数矩阵|done
+17:35-19:50|线性代数矩阵|done
+21:50-22:50|线性代数矩阵|done
