--- a/Apr/4.26-5.2.md
+++ b/Apr/4.26-5.2.md
@@ -27,13 +27,13 @@ Time|Progame|Sign
 14:15-15:15|线性代数行列式|done
 15:15-19:30|线性代数矩阵|done
 
-**2020.4.28**
+**2020.4.29**
 
 Time|Progame|Sign
 :-----:|:-----:|:-----:|
 8:35-8:55|英语单词P46+听写|done
 
-**2020.4.28**
+**2020.4.30**
 
 Time|Progame|Sign
 :-----:|:-----:|:-----:|
@@ -43,3 +43,11 @@ Time|Progame|Sign
 16:45-17:10|线性代数矩阵|done
 17:35-19:50|线性代数矩阵|done
 21:50-22:50|线性代数矩阵|done
+
+**2020.5.1**
+
+Time|Progame|Sign
+:-----:|:-----:|:-----:|
+7:40-8:00|英语单词P48+听写|done
+8:00-11:10|线性代数矩阵|done
+14:10-15:15|线性代数矩阵|done
