--- a/May/5.3-5.9.md
+++ b/May/5.3-5.9.md
@@ -5,4 +5,6 @@
 Time|Progame|Sign
 :----:|:----:|:----:|
 9:00-12:00|线性代数矩阵|done
-14:20-|操作系统2.3|
+14:20-15:20|操作系统2.3|done
+16:00-17:00|操作系统2.4|done
+18:05-19:10|操作系统2.4|done
