--- a/May/5.3-5.9.md
+++ b/May/5.3-5.9.md
@@ -8,3 +8,12 @@ Time|Progame|Sign
 14:20-15:20|操作系统2.3|done
 16:00-17:00|操作系统2.4|done
 18:05-19:10|操作系统2.4|done
+
+**2020.5.7**
+
+Time|Progame|Sign
+:----:|:----:|:----:|
+8:10-8:55|操作系统2.4+2.5|done
+8:55-10:00|线性代数矩阵|done
+15:10-16:50|线性代数矩阵|done
+17:50-19:00|线性代数矩阵|done
