--- a/May/5.3-5.9.md
+++ b/May/5.3-5.9.md
@@ -17,3 +17,11 @@ Time|Progame|Sign
 8:55-10:00|线性代数矩阵|done
 15:10-16:50|线性代数矩阵|done
 17:50-19:00|线性代数矩阵|done
+
+**2020.5.9**
+
+Time|Progame|Sign
+:----:|:----:|:----:|
+10:00-12:00|线性代数方程组|done
+15:50-17:30|线性代数方程组|done
+18:40-|线性代数方程组|
