--- a/May/5.3-5.9.md
+++ b/May/5.3-5.9.md
@@ -24,4 +24,4 @@ Time|Progame|Sign
 :----:|:----:|:----:|
 10:00-12:00|线性代数方程组|done
 15:50-17:30|线性代数方程组|done
-18:40-|线性代数方程组|
+18:40-19:00|线性代数方程组|done
